# Atmega328p-Esp32-S3-HAL

./: Cargo.toml  Makefile  README.md  sonar-project.properties  test_code_c
.github/workflows/: build.yml
.scannerwork/: report-task.txt
src/: gpio.rs  gpio_atmega328p.rs  gpio_esp32s3.rs  i2c_esp32s3.rs  lib.rs  main.rs  spi_atmega328p.rs  spi_esp32s3.rs  usart.rs  usart_atmega328p.rs  usart_esp32s3.rs
src/gpio/: gpio_atmega328p.rs  gpio_esp32s3.rs  mod.rs
src/i2c/: i2c_atmega328p.rs  mod.rs
src/spi/: mod.rs
src/usart/: mod.rs  usart_esp32s3.rs
